# dex-rs

./: Cargo.toml  README.md
client/: Cargo.toml
client/src/: main.rs
client/src/lib/: mod.rs
extract/: Cargo.toml
extract/src/: fetch.rs
lib/capture/: Cargo.toml
server/: Cargo.toml
sources/: Cargo.toml  config.toml.example
sources/config/: sources.toml
sources/insee/: mod.rs
sources/src/: lib.rs  main.rs
sources/src/config/: mod.rs
src/: main.rs
