[package]
name = "dex-extract"
version = "0.1.0"
authors = ["thda"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
config = "0.9"
clap = "3.0.0-beta.2"
bytes = "1"
futures-core = "0.3.8"